--- a/public/case-studies/myflix.html
+++ b/public/case-studies/myflix.html
@@ -9,9 +9,10 @@
 <body>
 
     <div class="main-content">
-        
+
         <div class="return-button-section">
             <a class="button" href="http://www.timpamplin.com/">Back To Main Site</a>
+            <a class="button" href="/case-studies/myflix-case-study.pdf">Download PDF Version</a>
         </div>
 
         <div class="page-header">
