--- a/public/case-studies/myflix.html
+++ b/public/case-studies/myflix.html
@@ -12,7 +12,7 @@
 
         <div class="return-button-section">
             <a class="button" href="http://www.timpamplin.com/">Back To Main Site</a>
-            <a class="button" href="/case-studies/myflix-case-study.pdf">Download PDF Version</a>
+            <a class="button" href="/case-studies/myflix-case-study.pdf">PDF Version</a>
         </div>
 
         <div class="page-header">
@@ -402,6 +402,7 @@
 
         <div class="return-button-section">
             <a class="button" href="http://www.timpamplin.com/">Back To Main Site</a>
+            <a class="button" href="/case-studies/myflix-case-study.pdf">PDF Version</a>
         </div>
 
     </div>
