finish meet case study

--- a/public/case-studies/meet.html
+++ b/public/case-studies/meet.html
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div>
-                    <img class="image" src="./img/DevelopmentChaos.png" alt="a screenshot of all the windows I needed to build this project">
+                    <img class="image" src="./img/meet-code.png" alt="A screenshot of the code.">
                 </div>
             </div>
         </div>
@@ -152,6 +152,7 @@
                         </p>
                     </div>
                 </div>
+                <img class="image" src="./img/meet-desktop.png" alt="a screenshot of the table of contents of the api documentation.">
 
             </div>
         </div>
@@ -162,7 +163,7 @@
             <p>
                 To ensure the Meet application worked as expected, I used Jest and Cucumber for testing. I wrote behavior-driven tests using Gherkin syntax to describe user interactions and application features. These tests helped verify that key functionalities—such as event filtering, authentication, and data visualization—performed correctly. Automated testing with Jest-Cucumber allowed me to catch bugs early and maintain confidence as I added new features.
             </p>
-            <img class="image" src="./img/DocumentationPic.png" alt="a screenshot of the table of contents of the api documentation.">
+
         </div>
 
         <div class="section">
@@ -173,7 +174,8 @@
                 </p>
             </div>
             
-            <img class="image" src="./img/DocumentationPic.png" alt="A screenshot of the meet application.">
+            <img class="image" src="./img/meet-mobile.png" alt="A screenshot of the meet application on mobile.">
+            <img class="image" src="./img/meet-events.png" alt="A screenshot of some events you might see on the meet application.">
         </div>
 
         <div class="section">
@@ -182,43 +184,28 @@
                 <div class="grid-unit">
                     <h4>How did this project go?</h4>
                     <p>
-                        This was easily the most difficult and time consuming project that
-                        I worked on during the Full Stack Immersion course at Career
-                        Foundry. This was probably one of the most difficult projects I’ve
-                        ever worked on. It was difficult for me to find adequate time to
-                        work on it, as I was working full time, and trying to make time for
-                        my family. I would sit down at my desk, and by the time I had
-                        figured out where I was and what I was working on, I had already
-                        run out of time. Ultimately, I just ended up sacrificing my sleep
-                        schedule, and staying up until two or three o’clock in the morning
-                        to work on this. I also spent ages trying to fix a bug in my front end
-                        that ended up actually being an issue with how my back end was
-                        handling the request. I had to get help from several different
-                        people before I was able to get that working. Overall, however, this
-                        was a very fulfilling project to work on, and I am proud of the final
-                        result that I produced. If you want to check it out, it is hosted on
-                        Netlify
+                        Throughout the development of this project, I encountered several challenges that helped me grow as a developer. 
+                        One of the main hurdles was integrating third-party APIs, particularly data fetching 
+                        from the Google Calendar API. Ensuring secure and seamless authentication with Firebase required careful 
+                        configuration and troubleshooting. Additionally, managing asynchronous data flow in React—especially when 
+                        dealing with real-time updates and user interactions—proved to be complex at times. Styling the application to be
+                        fully responsive across devices also took significant effort, as I wanted the user experience to be consistent and 
+                        intuitive. Finally, writing comprehensive tests with Jest and Cucumber was initially challenging, but it ultimately 
+                        improved the reliability and maintainability of the codebase.
                     </p>
                     <br>
-                    <a href="https://pamplin-myflix.netlify.app/">View This Project</a>
+                    <a href="https://meet-app-jet.vercel.app/">View This Project</a>
                 </div>
                 <div class="grid-unit">
                     <h4>What would I add or change?</h4>
                     <p>
-                        I was on a bit of a time crunch during this project, so I didn’t get to
-                        do everything that I wanted to. I always wanted to add more than
-                        ten movies to the database, or even better, I wanted to add the
-                        ability for a user to add a movie to the list; I even considered
-                        creating a second application specifically for reviewing movie
-                        submissions before they were shown on the main site. I could
-                        have spent a lifetime on styling and layout, but I had to move on to
-                        other projects in order to complete my course on time. This
-                        version of the app does not have the ability to view more
-                        information about the director or genre, even though that
-                        information is available in the database, so I would have liked to
-                        implement a pop up when you click on the director or genre that
-                        gives you that information. Other than that, I don’t think there was much I would change
-                        about this project.
+                        If I were to continue developing this project, I would love to add a few new features. 
+                        For example, I could implement a search functionality so users can quickly find events 
+                        by keyword or topic in addition to location. Adding user profiles where attendees can save favorite events or RSVP 
+                        directly within the app would also enhance the experience. Integrating notifications or email 
+                        reminders for upcoming events could help users stay informed. Additionally, I’d like to improve 
+                        accessibility and add support for multiple languages to reach a broader audience. Finally, 
+                        building an admin dashboard to manage events and moderate content would make the app more robust and scalable.
                     </p>
                 </div>
             </div>
@@ -226,7 +213,6 @@
 
         <div class="return-button-section">
             <a class="button" href="http://www.timpamplin.com/">Back To Main Site</a>
-            <a class="button" href="/case-studies/myflix-case-study.pdf">PDF Version</a>
         </div>
 
     </div>
